--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+// Тема
 /* You can add global styles to this file, and also import other style files */
 * {
   padding: 0;
