--- a/src/app/main/components/dashboard/dashboard.component.html
+++ b/src/app/main/components/dashboard/dashboard.component.html
@@ -1,14 +1,19 @@
-<p>dashboard works!</p>
-
 <li class="navigation__item" routerLinkActive="navigation__item_active">
   <a class="navigation__link" routerLink="/">
-    g1111111
+    главная
   </a>
 </li>
 
 
 <li class="navigation__item" routerLinkActive="navigation__item_active">
-  <a class="navigation__link" routerLink="/content/supplements">
-    gdgjnlkngskngfksfems;efs
+  <a class="navigation__link" routerLink="/registry">
+    Реестр
+  </a>
+</li>
+
+
+<li class="navigation__item" routerLinkActive="navigation__item_active">
+  <a class="navigation__link" routerLink="/auth">
+    Авторизация
   </a>
 </li>
