--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <svg
-    *ngIf="this.mainService.themeSubject$.value === 'light'"
+    *ngIf="sharedService.themeSubject$.value === 'light'"
     (click)="changeLanguage()"
     width="24"
     height="24"
@@ -19,7 +19,7 @@
   </svg>
 
   <svg
-    *ngIf="this.mainService.themeSubject$.value === 'dark'"
+    *ngIf="sharedService.themeSubject$.value === 'dark'"
     (click)="changeLanguage()"
     width="24"
     height="24"
@@ -37,7 +37,7 @@
   </svg>
 
   <svg
-    *ngIf="this.mainService.themeSubject$.value === 'light'"
+    *ngIf="sharedService.themeSubject$.value === 'light'"
     (click)="changeTheme('dark')"
     width="24"
     height="24"
@@ -55,7 +55,7 @@
       3.1C12.92 3.04 12.46 3 12 3Z" />
   </svg>
   <svg
-    *ngIf="this.mainService.themeSubject$.value === 'dark'"
+    *ngIf="sharedService.themeSubject$.value === 'dark'"
     (click)="changeTheme('light')"
     width="24"
     height="24"
