--- a/src/app/main/components/registry/registry.component.html
+++ b/src/app/main/components/registry/registry.component.html
@@ -5,8 +5,7 @@
       <mat-label>{{ 'table.status' | translate }}</mat-label>
       <mat-select [panelClass]="panelClass" [(ngModel)]="sortingValue">
         <mat-option *ngFor="let status of statuses" [value]="status" (click)="sortingDataSource(status)">
-          <span [class]="getClassColor(status)">{{ status }}</span>
-
+          <span [class]="sharedService.getClassColor(status)">{{ status }}</span>
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -18,20 +17,23 @@
       <input (input)="onSearch.next($event)" matInput>
     </mat-form-field>
   </div>
+
+  <div class="additive_search-add" (click)="addItem()">
+    <button>Добавить</button>
+  </div>
 </div>
-<div id="table_responsive" class="supplements table-responsive">
 
+<div id="table_responsive" class="additive table-responsive">
+  <table mat-table [dataSource]="dataSource" class="additive__table" id="additive__table">
 
-  <table mat-table [dataSource]="dataSource" class="supplements__table" id="supplements__table">
-
-    <ng-container matColumnDef="number">
+    <ng-container matColumnDef="additive">
       <th mat-header-cell *matHeaderCellDef>{{ 'table.additive' | translate }}</th>
-      <td mat-cell *matCellDef="let element">{{ element.number }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.additive }}</td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>{{ 'table.status' | translate }}</th>
-      <td mat-cell *matCellDef="let element" [class]="getClassColor(element.status)">{{ element.status }}</td>
+      <td mat-cell *matCellDef="let element" [class]="sharedService.getClassColor(element.status)">{{ element.status }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -43,7 +45,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showItem(row)"></tr>
   </table>
 </div>
 
